crates/etas_tests/fixtures/compiler/projects/negative/raw_relative_import/src/app/main.es
module app.main;

import "../local/file.es";

flow main(args: Array<string>) -> i32 ![]
{
    return 0;
}
